--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,13 @@ body, ol, ul, header {
 }
 
 body {
-  background-color: rgb(253, 251, 251);
-  color: whitesmoke;
+  background-color: rgb(253 , 251 , 251);
+  color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #cabecalho {
-  background-color: rgb(15, 155, 142);
+  background-color: rgb(15 , 155 , 142);
   position: fixed;
   text-align: center;
   top: 0;
@@ -25,7 +25,7 @@ body {
 }
 
 #links a {
-  color: rgb(255, 255, 255);
+  color: white;
   font-size: 1.2rem;
   padding: 0 20px;
   text-decoration: none;
@@ -36,7 +36,7 @@ body {
 }
 
 main {
-  background-color: rgb(3, 113, 156);
+  background-color: rgb(3 , 113 , 156);
   padding: 100px;
 }
 
@@ -53,12 +53,12 @@ ul li, ol li {
 }
 
 table, th {
-  border: 1px dotted rgb(52, 56, 55);
+  border: 1px dotted rgb(52 , 56 , 55);
   width: 500px;
 }
 
 #rodape {
-  background-color: rgb(52, 56, 55);
+  background-color: rgb(52 , 56 , 55);
   padding: 10px 0;
   text-align: center;
 }
