--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     background-color: rgb(253 , 251 , 251);
     margin: 0 auto;
+    font-family: 'Lato', sans-serif;
 }
 
 #cabecalho {
@@ -13,6 +14,13 @@ body {
     top: 0;
     width: 100%;
     background-color: #334f54;
+    color: rgb(253 , 251 , 251);
+    text-align: center;
+}
+
+.nav-links {
+    display: inline-block;
+    margin-right: 40px;
 }
 
 main {
