--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     background-color: rgb(253,251,251);
+    background-position: center;
+    margin-left: 50px;
 }
 #cabecalho {
     position: fixed;
