--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: rgb(253, 251, 251);
     font-size: 20px;
-     }
+    font-family: sans-serif;
+    }
 
 .rodape {
     margin-top: 40px;
@@ -14,14 +15,14 @@ body {
     text-align: center;
     text-emphasis: bold;
     font-size: 1em;
-    background-color: red;
-    }
+       }
 #titulo {
-    text-align: center;
-    color: blue;
-}    
+    font-display: center;
+    text-emphasis: bold;
+    }    
 
 #minha_foto {
+    margin-top: 100px;
     }
 
 #licoes_aprendidas {
