--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 /*                                                   --- BODY ---                                                    */
 body {
     background-color: rgb( 253, 251, 251);
+    margin: 0;
+    padding: 0;
 }
 
 /*                                                   --- HEADER ---                                                    */
-header {
-    position: fixed;
-    margin-top: 0px;
+
+/*                                                   --- MAIN ---                                                    */
+
+/*                                                   --- ARTICLE ---                                                    */
+
+/*                                                   --- FOOTER ---                                                    */
+footer{
+    width: 100%;
+    height: 11%;
+    overflow: hidden;
 }
