--- a/style.css
+++ b/style.css
@@ -1,9 +1,24 @@
-*{
-    margin: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+* {
+  margin: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 body {
   background-color: rgb(253, 251, 251);
+}
+
+#cabecalho {
+  width: 100%;
+  background-color: green;
+}
+
+#minha_foto {
+  display: block;
+  width: 200px;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 2px solid green;
+  box-shadow: 1px 0.8px 1px black;
+  margin-top: 60px;
 }
 
 #cabecalho {
