--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: 'Josefin Sans', 'sans-serif';
+  font-family: Josefin Sans, sans-serif;
   font-size: 20px;
   line-height: 30px;
-  color: #272a2d;
+  color: rgb(39 , 42 , 45);
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
-  background-color: #555b6e;
+  background-color: rgb(85 , 91 , 110);
 }
 
 #titulo {
-  color: #fAf9f9;
+  color: rgb(253 , 251 , 251);
 }
 
 #apresentacao {
@@ -31,8 +31,8 @@ body {
 }
 
 h1 {
-  font-family: 'Josefin Sans', 'sans-serif';
-  color: #272a2d;
+  font-family: Josefin Sans, sans-serif;
+  color: #rgb(39 , 42 , 45);
 }
 
 #rodape {
