--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
+  font-family: 'Patrick Hand', cursive;
 }
 
 /* Class styles */
@@ -17,6 +18,7 @@ body {
   position: fixed;
   width: 100%;
   height: 100px;
+  font-family: 'Satisfy', cursive;
 }
 
 #titulo {
@@ -41,6 +43,7 @@ body {
   display: block;
   width: 100%;
   height: 100px;
+  font-family: 'Satisfy', cursive;
 }
 
 /* Inherit styles */
