--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
-body {
-    background-color:rgb(253, 251, 251);
+ body {
+  background-color: rgb(253, 251, 251);
 }
 
-#cabecalho {
-    top: 0;
+ #cabecalho {
+  top: 0;
+  position: fixed;
 }
 
-#minha_foto {
-    width: 300px;
+ #minha_foto {
+  width: 300px;
 }
