--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body {
-    background-color: rgb(253,251,251);
+    background-color: rgb(253, 251, 251);
     background-position: center;
     margin-left: 50px;
 }
+
 #cabecalho {
     position: fixed;
     top: 0px;
-    font-family: "Indie Flower", cursive;
+    font-family:"Indie Flower", cursive;
     font-size: 30px;
 }
+
 #minha_foto {
     border-radius: 10px;
     float: left;
 }
+
 #headNav {
     float: right;
     position: absolute;
@@ -20,15 +23,18 @@ body {
     bottom: 120px;
     margin-left: 100px;
 }
+
 #main {
     margin-top: 150px;
     margin-right: 550px;
 }
+
 #sectionLearn {
     display: inline-block;
 }
+
 footer {
     background-color: black;
     color: white;
-    font-family: "Courier New", Courier, monospace;
+    font-family:"Courier New", Courier, monospace;
 }
