Realizaçao do requisito 5 e fix do requisito 4: listas ordenadas para 10 itens aprendidos e 10 itens a aprender.

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   text-align: center;
   color: white;
-  border-bottom: ;
+  border: 5px, solid, black;
 }
 
 #minha_foto {
