--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 h1 {
   font-family: Josefin Sans, sans-serif;
-  color: #rgb(39 , 42 , 45);
+  color: rgb(39 , 42 , 45);
 }
 
 #rodape {
