adicionado NAV e css

--- a/style.css
+++ b/style.css
@@ -1,11 +1,60 @@
+main a {
+  text-decoration: none;
+  display: block;
+  font-size: 1.5em;
+  background-color: seagreen;
+  margin: 0%;
+}
+
 body {
-  font-family: fantasy , sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
   background-color: rgb(253 , 251 , 251);
   height: 768px;
   width: 1366px;
 }
 
+header h1 {
+  margin-top: 0%;
+}
+
+nav ul li {
+  background-color: sienna;
+  display: inline;
+  padding: 0px 25px;
+}
+
+article{
+  display: inline-block;
+}
+
 #cabecalho {
   position: fixed;
-  top: 0px;
+  top: 0%;
+  width: 1366px;
+}
+
+#titulo {
+  text-align: center;
+  background-color: seagreen;
+  width: 100%;
+}
+
+#licoes {
+  background-color: salmon;
+}
+
+#licoes_aprendidas, #licoes_a_aprender {
+  display: inline-block;
+  width: 40%;
+}
+
+#minha_foto {
+  box-shadow: 2px 4px 8px 2px rgba(0,0,0,0.2);
+  border-radius: 30px;
+  width: 300px;
+}
+
+.imgbox {
+  text-align: center;
+  margin: 60px auto 25px auto;
 }
