--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-* {
-    margin: 0px;
-}
+    * {
+        margin: unset;
+    }
 
-#cabecalho {
-    text-align: center;
-    background-color: forestgreen;
-    top: 0cm;
-}
+    #cabecalho {
+        text-align: center;
+        background-color:forestgreen;
+        top: unset;
+    }
 
-body {
-    background-color: rgb(253, 251, 251);
-}
+    body {
+        background-color:rgb(253,251,251);
+    }
