--- a/style.css
+++ b/style.css
@@ -1,14 +1,29 @@
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   line-height: 30px;
   margin: 30px;
   padding: 10px;
+  color: rgb(37 , 37 , 37);
 }
 
 h1 {
-  color: rgb(37, 37, 37);
+  color: rgb(37 , 37 , 37);
+}
+
+.aprendidas {
+  display: block;
+  float: left;
+  width: 40%;
+  padding: 10px 30px;
+}
+
+.aprender {
+  display: block;
+  float: right;
+  width: 50%;
+  padding: 10px 30px;
 }
 
 #cabecalho {
@@ -16,16 +31,20 @@ h1 {
   top: 0px;
 }
 
-#aticle-content{
-  background-color: rgb(156 , 156 , 253);
+#aticle-content {
   display: flex;
   float: left;
-  max-width: 60%;
+  max-width: 65%;
+  padding: 10px;
 }
 
 #aside-content {
-  background-color: rgb(255 , 138 , 161);
   display: flex;
   float: right;
-  max-width: 40%;
+  max-width: 30%;
+  padding: 10px;
+} 
+
+.artigo{
+  padding: 10px 30px;
 }
